# si-clouds

./: README.md  pyproject.toml
figures/: fig01.ipynb  fig02.ipynb  fig04.ipynb  fig05.ipynb  fig06.ipynb  fig07.ipynb  fig08_fig09.ipynb  fig10.ipynb  fig11.ipynb  fig12.ipynb
src/si_clouds/helpers/: ancillary.py  distances.py  era5download.py  halobounds.py  ice_sondes.py  iwv_sensitivity.ipynb  model2pressure.py  sigmoid.py  smrt_medium.py
src/si_clouds/io/readers/: ancillary.py  dropsondes.py  era5.py  oem_result.py  retrieval_times.py  sensitivity.py  setting.py  smrt_layers.py  specmacs.py  velox.py  velox_class.py  yif_cwp_iwv_sensitivity.py
src/si_clouds/retrieval/: apatm.py  apsur.py  oem.py  oem_runner.sh  oem_syn_runner.sh  sensitivity.py  sensitivity_fyi.py  sensitivity_iwv.py  surface.py  synthetic.py
src/si_clouds/retrieval/settings/: descriptor_file_ecmwf.txt  setting_retrieval_r1.yaml  setting_retrieval_r2.yaml  smrt_layers_r1.yaml  smrt_layers_r2.yaml
